--- a/contact.html
+++ b/contact.html
@@ -50,7 +50,7 @@
         <section id="contact" class="section">
             <div class="container">
                 <h2 class="section-title">Get In Touch</h2>
-                <p class="section-subtitle">Interested in collaboration or have questions about my research?</p>
+                <p class="section-subtitle">If you have any questions for me, feel free to reach out!</p>
                 
                 <div class="contact-content">
                     <div class="contact-info">
@@ -58,7 +58,7 @@
                             <i class="fas fa-envelope"></i>
                             <div>
                                 <h4>Email</h4>
-                                <a href="mailto:sarah.chen@stanford.edu">sarah.chen@stanford.edu</a>
+                                <a href="mailto:huyphunguyen2808@gmail.com">huyphunguyen2808@gmail.com</a>
                             </div>
                         </div>
                         
@@ -66,7 +66,7 @@
                             <i class="fas fa-map-marker-alt"></i>
                             <div>
                                 <h4>Office</h4>
-                                <p>Varian Physics Building, Room 108<br>Stanford University, CA 94305</p>
+                                <p>I don't have an office :P</p>
                             </div>
                         </div>
 
