Update personal introduction in about.html

--- a/about.html
+++ b/about.html
@@ -54,12 +54,13 @@
                         <h1 class="hero-title">NGUYEN Phu-Huy</h1>
                         <h2 class="hero-subtitle">Master's Student in Astrophysics and Space Science</h2>
                         <p class="hero-description">
-                            I am Huy, and I am from Hanoi, Vietnam. Currently, I am pursuing my Master's degree in Astrophysics and Space Science at the University of Rome "Tor Vergata". 
-                            The questions that keep me up at night are: How did the Universe begin? What is the nature of dark matter and dark energy? How do the grand structures form from the primordial fluctuations?
-                            I am passionate about exploring these questions through both simulations and observation. 
+                            <p>I am Huy, and I am from Hanoi, Vietnam. Currently, I am an Erasmus Mundus master student in Astrophysics and Space Science at the University of Rome "Tor Vergata".</p>
+                        
+                            <p>The questions that keep me up at night are: How did the Universe begin? What is the nature of dark matter and dark energy? How do the grand structures form from the primordial fluctuations?
+                            I am passionate about exploring these questions through both simulations and observation.</p>
                             
-                            You can find more about my academic journey in my <a href="cv.html">CV</a>, my current and pass research in <a href="research.html">Research</a>, and my study notes in <a href="notes.html">Notes</a>.
-                            I also love to travel and explore new places, which you can see in my <a href="travel.html">Travel</a>, which are the list of events and places I have visited and given talks.
+                            <p>You can find more about my academic journey in my <a href="cv.html">CV</a>, my current and pass research in <a href="research.html">Research</a>, and my study notes in <a href="notes.html">Notes</a>.
+                            I also love to travel and explore new places, which you can see in my <a href="travel.html">Travel</a>, which are the list of events and places I have visited and given talks.</p>
 
                         </p>
                         <div class="research-interests">
