--- a/notes.html
+++ b/notes.html
@@ -49,42 +49,42 @@
         <!-- Notes Section -->
         <section id="notes" class="section">
             <div class="container">
-                <h2 class="section-title">Research Notes</h2>
-                <p class="section-subtitle">Thoughts and reflections on astrophysics and computational methods</p>
+                <h2 class="section-title">Notes</h2>
+                <p class="section-subtitle">Just my study notes</p>
                 
                 <div class="notes-grid">
                     <article class="note-card">
-                        <div class="note-date">December 15, 2024</div>
-                        <h3>Understanding Dark Matter Through Simulations</h3>
-                        <p>Reflections on the latest N-body simulation results and their implications for our understanding of dark matter distribution in galactic halos...</p>
-                        <div class="note-tags">
+                        <!-- <div class="note-date">December 15, 2024</div> -->
+                        <h3>Radiative Process</h3>
+                        <p> Astronomy is the science of observation and from the radiation observed, we learned about what is going on in the universe through radiative processes.</p>
+                        <!-- <div class="note-tags">
                             <span class="note-tag">Dark Matter</span>
                             <span class="note-tag">Simulations</span>
-                        </div>
-                        <a href="#" class="read-more">Read More</a>
+                        </div> -->
+                        <a href="notes_radiative.html" class="read-more">Read More</a>
                     </article>
 
                     <article class="note-card">
-                        <div class="note-date">November 28, 2024</div>
-                        <h3>Python Tools for Astrophysics</h3>
-                        <p>A comprehensive guide to essential Python libraries for astronomical data analysis, from AstroPy basics to advanced statistical methods...</p>
-                        <div class="note-tags">
+                        <!-- <div class="note-date">November 28, 2024</div> -->
+                        <h3>Modern Astrophysics</h3>
+                        <p> General overview of modern astrophysics (mostly stellar physics), covering key concepts and recent advancements in the field.</p>
+                        <!-- <div class="note-tags">
                             <span class="note-tag">Python</span>
                             <span class="note-tag">Data Analysis</span>
                             <span class="note-tag">Tools</span>
-                        </div>
-                        <a href="#" class="read-more">Read More</a>
+                        </div> -->
+                        <a href="notes_modern.html" class="read-more">Read More</a>
                     </article>
 
                     <article class="note-card">
-                        <div class="note-date">October 12, 2024</div>
-                        <h3>The Beauty of Cosmic Microwave Background</h3>
-                        <p>Exploring the intricate patterns in CMB data and what they reveal about the early universe, inflation, and the seeds of structure formation...</p>
-                        <div class="note-tags">
+                        <!-- <div class="note-date">October 12, 2024</div> -->
+                        <h3>Mathematical Methods for Physics</h3>
+                        <p>Just math</p>
+                        <!-- <div class="note-tags">
                             <span class="note-tag">CMB</span>
                             <span class="note-tag">Cosmology</span>
-                        </div>
-                        <a href="#" class="read-more">Read More</a>
+                        </div> -->
+                        <a href="notes_math.html" class="read-more">Read More</a>
                     </article>
                 </div>
             </div>
