--- a/research.html
+++ b/research.html
@@ -49,53 +49,51 @@
         <!-- Research Section -->
         <section id="research" class="section">
             <div class="container">
-                <h2 class="section-title">Research Projects</h2>
+                <h2 class="section-title">Current Research</h2>
                 <div class="research-grid">
                     <div class="research-card">
                         <div class="research-image">
-                            <div class="image-placeholder">
-                                <i class="fas fa-chart-line"></i>
-                            </div>
+                            <img src="image/proper_motion.png" alt="Quasars Proper Motion Dipole" class="proper-motion-img">
                         </div>
                         <div class="research-content">
-                            <h3>Dark Matter Halo Evolution</h3>
-                            <p>N-body simulations investigating the formation and evolution of dark matter halos in different cosmological scenarios. Focus on halo mass functions and merger rates.</p>
-                            <div class="research-tools">
+                            <h3>Quasars Proper Motion Dipole</h3>
+                            <p>Using summary statistics (2-point correlation function) of the quasars proper motion fields and simulation-based inference to infer acceleration of the Solar system and the homogeneity and isotropy of the Universe.</p>
+                            <!-- <div class="research-tools">
                                 <span class="tool-tag">Python</span>
                                 <span class="tool-tag">GADGET-2</span>
                                 <span class="tool-tag">NumPy</span>
                                 <span class="tool-tag">Matplotlib</span>
-                            </div>
+                            </div> -->
                             <div class="research-links">
+                                <a href="research_quasars.html" class="link-btn"><i class="fas fa-info-circle"></i> Details</a>
                                 <a href="#" class="link-btn"><i class="fab fa-github"></i> GitHub</a>
-                                <a href="#" class="link-btn"><i class="fas fa-file-pdf"></i> Paper</a>
+                                <!-- <a href="#" class="link-btn"><i class="fas fa-file-pdf"></i> Paper</a> -->
                             </div>
                         </div>
                     </div>
 
                     <div class="research-card">
                         <div class="research-image">
-                            <div class="image-placeholder">
-                                <i class="fas fa-satellite"></i>
-                            </div>
+                            <img src="image/high_z.png" alt="High-redshift Galaxies" class="high-z-img">
                         </div>
                         <div class="research-content">
-                            <h3>CMB Polarization Analysis</h3>
-                            <p>Analysis of cosmic microwave background polarization data from Planck satellite to constrain inflationary models and primordial gravitational waves.</p>
-                            <div class="research-tools">
+                            <h3>High-redshift galaxies</h3>
+                            <p>Studying the morphologies and physical properties of high-redshift lensed galaxies</p>
+                            <!-- <div class="research-tools">
                                 <span class="tool-tag">Python</span>
                                 <span class="tool-tag">HEALPix</span>
                                 <span class="tool-tag">NaMaster</span>
                                 <span class="tool-tag">AstroPy</span>
-                            </div>
+                            </div> -->
                             <div class="research-links">
+                                <a href="research_highz.html" class="link-btn"><i class="fas fa-info-circle"></i> Details</a>
                                 <a href="#" class="link-btn"><i class="fab fa-github"></i> GitHub</a>
-                                <a href="#" class="link-btn"><i class="fas fa-external-link-alt"></i> Poster</a>
+                                <!-- <a href="#" class="link-btn"><i class="fas fa-external-link-alt"></i> Poster</a> -->
                             </div>
                         </div>
                     </div>
 
-                    <div class="research-card">
+                    <!-- <div class="research-card">
                         <div class="research-image">
                             <div class="image-placeholder">
                                 <i class="fas fa-project-diagram"></i>
@@ -115,7 +113,7 @@
                                 <a href="#" class="link-btn"><i class="fas fa-code"></i> Code</a>
                             </div>
                         </div>
-                    </div>
+                    </div> -->
                 </div>
             </div>
         </section>
