--- a/travel.html
+++ b/travel.html
@@ -50,7 +50,7 @@
         <section id="travel" class="section">
             <div class="container">
                 <h2 class="section-title">Academic Travel</h2>
-                <p class="section-subtitle">Observatory visits, conferences, and research collaborations</p>
+                <p class="section-subtitle">Internship, Workshop, and Conference Participation</p>
                 
                 <div class="travel-grid">
                     <div class="travel-card">
@@ -60,13 +60,13 @@
                             </div>
                         </div>
                         <div class="travel-content">
-                            <h3>Atacama Large Millimeter Array (ALMA)</h3>
+                            <h3>Academia Sinica Institute of Astronomy and Astrophysics</h3>
                             <div class="travel-location">
                                 <i class="fas fa-map-marker-alt"></i>
-                                Atacama Desert, Chile
+                                Taipei, Taiwan
                             </div>
-                            <div class="travel-date">August 2024</div>
-                            <p>Participated in ALMA observing run for galaxy formation studies. Gained hands-on experience with interferometry and millimeter-wave astronomy.</p>
+                            <div class="travel-date">Jul. 2023 - Sep. 2023</div>
+                            <p>Participated in the ASIAA Summer Student Program</p>
                         </div>
                     </div>
 
@@ -77,13 +77,13 @@
                             </div>
                         </div>
                         <div class="travel-content">
-                            <h3>American Astronomical Society Meeting</h3>
+                            <h3>The 2nd SAGI astrophysics workshop on dust polarimetry</h3>
                             <div class="travel-location">
                                 <i class="fas fa-map-marker-alt"></i>
-                                New Orleans, LA
+                                Quy Nhon, Vietnam
                             </div>
-                            <div class="travel-date">January 2024</div>
-                            <p>Presented poster on "CMB Polarization Constraints on Inflation" and attended sessions on computational cosmology and dark matter research.</p>
+                            <div class="travel-date">Nov. 2023</div>
+                            <p>Participated in the workshop on cosmic dust and its role in astrophysical processes. </p>
                         </div>
                     </div>
 
@@ -94,13 +94,13 @@
                             </div>
                         </div>
                         <div class="travel-content">
-                            <h3>Mauna Kea Observatories</h3>
+                            <h3>AstroParticle and Cosmology Laboratory</h3>
                             <div class="travel-location">
                                 <i class="fas fa-map-marker-alt"></i>
-                                Hawaii, USA
+                                Paris, France
                             </div>
                             <div class="travel-date">June 2023</div>
-                            <p>Research collaboration at Keck Observatory for spectroscopic observations of distant galaxies. Amazing experience with adaptive optics systems.</p>
+                            <p>Conducted my bachelor graduation internship here</p>
                         </div>
                     </div>
 
@@ -111,13 +111,30 @@
                             </div>
                         </div>
                         <div class="travel-content">
-                            <h3>International Cosmology Summer School</h3>
+                            <h3>The 2025 SAGI Astrophysics Workshop</h3>
                             <div class="travel-location">
                                 <i class="fas fa-map-marker-alt"></i>
-                                Les Houches, France
+                                Quy Nhon, Vietnam
                             </div>
-                            <div class="travel-date">July 2023</div>
-                            <p>Three-week intensive program on theoretical cosmology and observational techniques. Networked with students and researchers from around the world.</p>
+                            <div class="travel-date">May 2025</div>
+                            <p>Presented a talk on "Probing our Peculiar Acceleration around Galaxy via Quasars' Proper Motion Observations"</p>
+                        </div>
+                    </div>
+
+                    <div class="travel-card">
+                        <div class="travel-image">
+                            <div class="image-placeholder">
+                                <i class="fas fa-graduation-cap"></i>
+                            </div>
+                        </div>
+                        <div class="travel-content">
+                            <h3>Rencontres du Vietnam: Cosmology 2025</h3>
+                            <div class="travel-location">
+                                <i class="fas fa-map-marker-alt"></i>
+                                Quy Nhon, Vietnam
+                            </div>
+                            <div class="travel-date">May 2025</div>
+                            <p>Presented a talk on "Cosmology with Quasar Proper Motions: Constraining Anisotropic Expansion of the Universe"</p>
                         </div>
                     </div>
                 </div>
