--- a/cv.html
+++ b/cv.html
@@ -100,24 +100,24 @@
                                     <div class="timeline-date">Jun. 2025 - Sep. 2025</div>
                                     <div class="timeline-content">
                                         <h4>Research Intern</h4>
-                                        <p>Department of Astrophysics - Vietnam National Space Center</p>
-                                        <p>Bla Bla</p>
+                                        <h4>Department of Astrophysics - Vietnam National Space Center | Hanoi, Vietnam</h4>
+                                        <p>I completed my master 1 thesis on a high-redshift lensed galaxy here</p>
                                     </div>
                                 </div>
                                 <div class="timeline-item">
                                     <div class="timeline-date">Apr. 2024 - Sep. 2024</div>
                                     <div class="timeline-content">
                                         <h4>Research Intern</h4>
-                                        <p>AstroParticle and Cosmology Laboratory - Paris Cité University</p>
-                                        <p>Bla BLa</p>
+                                        <h4>AstroParticle and Cosmology Laboratory - Paris Cité University | Paris, France</h4>
+                                        <p>I conducted my bachelor thesis on analyzing quasars proper motion field to infer acceleration of the Solar system and the homogeneity and isotropy of the Universe.</p>
                                     </div>
                                 </div>
                                  <div class="timeline-item">
                                     <div class="timeline-date">Jul. 2023 - Sep. 2023</div>
                                     <div class="timeline-content">
                                         <h4>Summer Student Intern</h4>
-                                        <p>Academia Sinica Institute of Astronomy and Astrophysics</p>
-                                        <p>Bla BLa</p>
+                                        <h4>Academia Sinica Institute of Astronomy and Astrophysics | Taipei, Taiwan</h4>
+                                        <p>I worked on the impact of gas turbulence on first star formation using cosmological simulations.</p>
                                     </div>
                                 </div>
                             </div>
