--- a/cv.html
+++ b/cv.html
@@ -51,9 +51,9 @@
             <div class="container">
                 <h2 class="section-title">Curriculum Vitae</h2>
                 <div class="cv-download">
-                    <a href="#" class="download-btn" onclick="downloadCV()">
-                        <i class="fas fa-download"></i>
-                        Download CV (PDF)
+                    <a href="image/CV_(10).pdf" target="_blank" class="download-btn">
+                        <i class="fas fa-eye"></i>
+                        View CV (PDF)
                     </a>
                 </div>
                 
@@ -76,7 +76,7 @@
                                     <div class="timeline-content">
                                         <h4>Master 1 in SPACE: Astrophysics, Earth Observation and Satellite Technology</h4>
                                         <p>University of Science and Technology of Hanoi</p>
-                                        <p>GPA: NaN, Rank: 1st</p>
+                                        <p>GPA: 16.13/20, Rank: 1st</p>
                                         <p>Thesis: "Clumpy Structure of a Lensed Galaxy at z ≈ 6 Revealed by the James Webb Space Telescope"</p>
                                     </div>
                                 </div>
@@ -93,6 +93,63 @@
                             </div>
                         </div>
 
+                        <div class="cv-section">
+                            <h3>Technical Skills</h3>
+                            <div class="skills-grid">
+                                <div class="skill-category">
+                                    <h4>Programming Languages</h4>
+                                    <div class="skills-list">
+                                        <span class="skill-item">Python</span>
+                                        <!-- <span class="skill-item">C++</span> -->
+                                        <span class="skill-item">MATLAB</span>
+                                        <span class="skill-item">C</span>
+                                        <!-- <span class="skill-item">Fortran</span> -->
+                                    </div>
+                                </div>
+                                <div class="skill-category">
+                                    <h4>Astrophysics Tools</h4>
+                                    <div class="skills-list">
+                                        <span class="skill-item">AstroPy</span>
+                                        <span class="skill-item">NaMaster</span>
+                                        <!-- <span class="skill-item">GADGET-2</span> -->
+                                        <span class="skill-item">HEALPix</span>
+                                        <span class="skill-item">DS9</span>
+                                        <!-- <span class="skill-item">IRAF</span> -->
+                                    </div>
+                                </div>
+                                <div class="skill-category">
+                                    <h4>Data Analysis</h4>
+                                    <div class="skills-list">
+                                        <span class="skill-item">NumPy</span>
+                                        <span class="skill-item">Pandas</span>
+                                        <span class="skill-item">Matplotlib</span>
+                                        <span class="skill-item">Scipy</span>
+                                        <!-- <span class="skill-item">Git/GitHub</span> -->
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+
+                        <div class="cv-section">
+                            <h3>Languages</h3>
+                            <div class="languages">
+                                <div class="language-item">
+                                    <span class="language-name">Vietnamese</span>
+                                    <span class="language-level">Native</span>
+                                </div>
+                                <div class="language-item">
+                                    <span class="language-name">English</span>
+                                    <span class="language-level">Fluent</span>
+                                </div>
+                                <div class="language-item">
+                                    <span class="language-name">French</span>
+                                    <span class="language-level">Basic</span>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+
+                    <div class="cv-column">
                         <div class="cv-section">
                             <h3>Research Experience</h3>
                             <div class="timeline">
@@ -119,63 +176,6 @@
                                         <h4>Academia Sinica Institute of Astronomy and Astrophysics | Taipei, Taiwan</h4>
                                         <p>I worked on the impact of gas turbulence on first star formation using cosmological simulations.</p>
                                     </div>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-
-                    <div class="cv-column">
-                        <div class="cv-section">
-                            <h3>Technical Skills</h3>
-                            <div class="skills-grid">
-                                <div class="skill-category">
-                                    <h4>Programming Languages</h4>
-                                    <div class="skills-list">
-                                        <span class="skill-item">Python</span>
-                                        <!-- <span class="skill-item">C++</span> -->
-                                        <span class="skill-item">MATLAB</span>
-                                        <span class="skill-item">R</span>
-                                        <!-- <span class="skill-item">Fortran</span> -->
-                                    </div>
-                                </div>
-                                <div class="skill-category">
-                                    <h4>Astrophysics Tools</h4>
-                                    <div class="skills-list">
-                                        <span class="skill-item">AstroPy</span>
-                                        <span class="skill-item">NaMaster</span>
-                                        <!-- <span class="skill-item">GADGET-2</span> -->
-                                        <span class="skill-item">HEALPix</span>
-                                        <span class="skill-item">DS9</span>
-                                        <!-- <span class="skill-item">IRAF</span> -->
-                                    </div>
-                                </div>
-                                <div class="skill-category">
-                                    <h4>Data Analysis</h4>
-                                    <div class="skills-list">
-                                        <span class="skill-item">NumPy/SciPy</span>
-                                        <span class="skill-item">Pandas</span>
-                                        <span class="skill-item">Matplotlib</span>
-                                        <span class="skill-item">Jupyter</span>
-                                        <span class="skill-item">Git/GitHub</span>
-                                    </div>
-                                </div>
-                            </div>
-                        </div>
-
-                        <div class="cv-section">
-                            <h3>Languages</h3>
-                            <div class="languages">
-                                <div class="language-item">
-                                    <span class="language-name">Vietnamese</span>
-                                    <span class="language-level">Native</span>
-                                </div>
-                                <div class="language-item">
-                                    <span class="language-name">English</span>
-                                    <span class="language-level">Fluent</span>
-                                </div>
-                                <div class="language-item">
-                                    <span class="language-name">French</span>
-                                    <span class="language-level">Basic</span>
                                 </div>
                             </div>
                         </div>
@@ -221,5 +221,40 @@
 
     <!-- JavaScript -->
     <script src="script.js"></script>
+</body>
+</html>
+    <script>
+        function openCVPreview() {
+            const modal = document.getElementById('cvModal');
+            const iframe = document.getElementById('cvFrame');
+            iframe.src = 'image/CV_(10).pdf';
+            modal.style.display = 'flex';
+            // Force reflow
+            modal.offsetHeight;
+            modal.classList.add('active');
+            document.body.style.overflow = 'hidden';
+        }
+
+        function closeCVPreview() {
+            const modal = document.getElementById('cvModal');
+            const iframe = document.getElementById('cvFrame');
+            modal.classList.remove('active');
+            setTimeout(() => {
+                modal.style.display = 'none';
+                iframe.src = '';
+            }, 300);
+            document.body.style.overflow = 'auto';
+        }
+
+        // Close modal when clicking outside
+        document.addEventListener('DOMContentLoaded', function() {
+            const modal = document.getElementById('cvModal');
+            modal.addEventListener('click', function(e) {
+                if (e.target === modal) {
+                    closeCVPreview();
+                }
+            });
+        });
+    </script>
 </body>
 </html>
