--- a/research_quasars.html
+++ b/research_quasars.html
@@ -79,9 +79,8 @@
                             represents that of the B-mode.</figcaption>
                         </figure>
 
-                        <p>The proper motion map is pixelized to perform summary statistics, specifically the 2-point correlation function. Theoretically, 
-                         the proper motion field induced by the acceleration of the Solar System
-                            has a unique signature in its 2-point correlation function, which is a pure E-mode dipole pattern. However, from the power spectrum in Figure 1, 
+                        <p>Theoretically, the proper motion field induced by the acceleration of the Solar System
+                            has a unique signature in its power spectrum, which is a pure E-mode dipole pattern. However, from the power spectrum in Figure 1, 
                             we saw that the higher-order multipoles are non zero, which indicates the presence of systematics in the data or (less likely) the 
                             inhomogeineity and anisotropy of the Universe at large scales. 
                             To better understand and quantify these effects, we employ simulation-based inference (SBI) techniques to model the proper motion field 
