--- a/travel.html
+++ b/travel.html
@@ -99,7 +99,7 @@
                                 <i class="fas fa-map-marker-alt"></i>
                                 Paris, France
                             </div>
-                            <div class="travel-date">June 2023</div>
+                            <div class="travel-date">Apr. 2024 - Sep. 2024</div>
                             <p>Conducted my bachelor graduation internship here</p>
                         </div>
                     </div>
@@ -133,7 +133,7 @@
                                 <i class="fas fa-map-marker-alt"></i>
                                 Quy Nhon, Vietnam
                             </div>
-                            <div class="travel-date">May 2025</div>
+                            <div class="travel-date">Aug. 2025</div>
                             <p>Presented a talk on "Cosmology with Quasar Proper Motions: Constraining Anisotropic Expansion of the Universe"</p>
                         </div>
                     </div>
