--- a/notes.html
+++ b/notes.html
@@ -67,7 +67,7 @@
                     <article class="note-card">
                         <!-- <div class="note-date">November 28, 2024</div> -->
                         <h3>Modern Astrophysics</h3>
-                        <p> General overview of modern astrophysics (mostly stellar physics), covering key concepts and recent advancements in the field.</p>
+                        <p> General overview of modern astrophysics (mostly stellar physics).</p>
                         <!-- <div class="note-tags">
                             <span class="note-tag">Python</span>
                             <span class="note-tag">Data Analysis</span>
